# Agentic-search-company

./: .gitignore  README.md  chatbot.py  main.py  pyproject.toml  server.py
deff/: __init__.py  search.py
web/: README.md  index.html  package-lock.json  package.json
web/src/: App.tsx  index.css
web/src/lib/: api.ts
